--- a/src/css/input.css
+++ b/src/css/input.css
@@ -62,4 +62,22 @@
     .text-teams {
         @apply text-xl xs:text-xl sm:text-2xl mh:text-[27px] lg:text-4xl;
     }
+
+    /*  */
+    .container-welcome {
+        @apply flex justify-center items-center bg-welcome bg-cover h-[600px] lg:h-[500px];
+    }
+
+    .card-welcome {
+        @apply bg-white max-w-[85%] xs:max-w-[80%] lg:max-w-[60%] p-5 xs:p-10;
+    }
+
+    .title-welcome {
+        @apply font-bold text-2xl lg:text-[2rem] mb-9
+        before:content-[''] before:border-2 before:border-light-blue-600 before:mr-4;
+    }
+
+    .text-welcome {
+       @apply text-gray-600 sm:indent-5 text-base lg:text-lg; 
+    }
 }
