--- a/src/css/input.css
+++ b/src/css/input.css
@@ -72,12 +72,34 @@
         @apply bg-white max-w-[85%] xs:max-w-[80%] xl:max-w-[60%] p-5 xs:p-10;
     }
 
-    .title-welcome {
+    .title {
         @apply font-bold text-2xl lg:text-[2rem] mb-9
         before:content-[''] before:border-2 before:border-light-blue-600 before:mr-4;
     }
 
     .text-welcome {
        @apply text-gray-600 sm:indent-5 text-base lg:text-lg; 
+    }
+
+    /* LATEST NEWS */
+    .card-latest-news {
+        @apply mx-auto md:mx-0 w-[70%] xs:w-[40%] md:w-[30%] cursor-pointer mb-14;
+    }
+
+    .subtitle-card {
+        @apply text-[14px] text-light-blue-600 font-bold; 
+    }
+
+    .date-card {
+        @apply text-gray-500 text-sm font-light;
+    }
+
+    .title-card {
+        @apply text-black-800 text-lg font-bold leading-[1.5];
+    }
+
+    .button-latest-news {
+        @apply text-white bg-gradient-to-r from-light-blue-600 to-magenta-700 hover:shadow-lg
+        rounded hover:shadow-light-blue-600 transition duration-300 px-6 py-3;
     }
 }
